<resources>
    <string name="app_name">Vinilos_App</string>
    <string name="drawer_open">Abrir Menú</string>
    <string name="drawer_close">Cerrar Menú</string>
    <string name="bienvenido_a_vinilos">Bienvenido a Vinilos</string>
    <string name="accede_como">Accede como:</string>
    <string name="usuario">Usuario</string>
    <string name="coleccionista">Coleccionista</string>
    <string name="logo_app">Logo Aplicación</string>
    <string name="user_icon">User Icon</string>
    <string name="vinilos">Vinilos -</string>
    <string name="uniandes_designers">Uniandes Designers</string>
    <string name="add_track">Agregar canción</string>

</resources>